{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 1174,
  "lineage": "1bbb86c7-7091-35e7-9be5-4904814cd256",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:loadbalancer/app/ALB-p003-threetier-backend/be4cf611d2cf2ebf",
            "arn_suffix": "app/ALB-p003-threetier-backend/be4cf611d2cf2ebf",
            "dns_name": "internal-ALB-p003-threetier-backend-1374188829.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:042236406240:loadbalancer/app/ALB-p003-threetier-backend/be4cf611d2cf2ebf",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-p003-threetier-backend",
            "security_groups": [
              "sg-0b3debecb6725aae0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-084223ecc28fd60b7"
              },
              {
                "subnet_id": "subnet-0f780596eae33dbfa"
              }
            ],
            "subnets": [
              "subnet-084223ecc28fd60b7",
              "subnet-0f780596eae33dbfa"
            ],
            "tags": {
              "Name": "ALB-p003-threetier-testing-backend-alb"
            },
            "vpc_id": "vpc-0243fd2107537ef89",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.private_http_anywhere",
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:loadbalancer/app/ALB-p003-threetier-frontend/6eb90d167d7eea7c",
            "arn_suffix": "app/ALB-p003-threetier-frontend/6eb90d167d7eea7c",
            "dns_name": "ALB-p003-threetier-frontend-239625570.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:042236406240:loadbalancer/app/ALB-p003-threetier-frontend/6eb90d167d7eea7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-p003-threetier-frontend",
            "security_groups": [
              "sg-04d00be9dc87329ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c9486336affd028"
              },
              {
                "subnet_id": "subnet-05d1ebef75dfeed7f"
              }
            ],
            "subnets": [
              "subnet-02c9486336affd028",
              "subnet-05d1ebef75dfeed7f"
            ],
            "tags": {
              "Name": "ALB-p003-threetier-testing-frontend-alb"
            },
            "vpc_id": "vpc-0243fd2107537ef89",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_http_anywhere",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:listener/app/ALB-p003-threetier-backend/be4cf611d2cf2ebf/0cf9749eac303763",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:targetgroup/ALB-p003-threetier-back-TG/66523635d28d079b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:042236406240:listener/app/ALB-p003-threetier-backend/be4cf611d2cf2ebf/0cf9749eac303763",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:loadbalancer/app/ALB-p003-threetier-backend/be4cf611d2cf2ebf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.backend",
            "module.alb.aws_lb_target_group.backend",
            "module.vpc.aws_security_group.private_http_anywhere",
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:listener/app/ALB-p003-threetier-frontend/6eb90d167d7eea7c/109db6adaadfc557",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:targetgroup/ALB-p003-threetier-front-TG/7a267a8af454485e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:042236406240:listener/app/ALB-p003-threetier-frontend/6eb90d167d7eea7c/109db6adaadfc557",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:loadbalancer/app/ALB-p003-threetier-frontend/6eb90d167d7eea7c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.frontend",
            "module.alb.aws_lb_target_group.frontend",
            "module.vpc.aws_security_group.public_http_anywhere",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:targetgroup/ALB-p003-threetier-back-TG/66523635d28d079b",
            "arn_suffix": "targetgroup/ALB-p003-threetier-back-TG/66523635d28d079b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:042236406240:targetgroup/ALB-p003-threetier-back-TG/66523635d28d079b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-p003-threetier-back-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:042236406240:targetgroup/ALB-p003-threetier-front-TG/7a267a8af454485e",
            "arn_suffix": "targetgroup/ALB-p003-threetier-front-TG/7a267a8af454485e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:042236406240:targetgroup/ALB-p003-threetier-front-TG/7a267a8af454485e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-p003-threetier-front-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0255499eb85cead4f",
            "domain": "vpc",
            "id": "eipalloc-0e75f20a3e90df2cc",
            "network_border_group": "us-east-2",
            "network_interface": "eni-04848076214bb092e",
            "private_dns": "ip-10-0-1-27.us-east-2.compute.internal",
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-3-17-123-159.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.123.159",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:internet-gateway/igw-030b02419937cce4a",
            "id": "igw-030b02419937cce4a",
            "owner_id": "042236406240",
            "tags": {
              "Name": "ThreeTier-p003-testing-gw"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e75f20a3e90df2cc",
            "id": "nat-0ece17da815dc0a83",
            "network_interface_id": "eni-04848076214bb092e",
            "private_ip": "10.0.1.27",
            "public_ip": "3.17.123.159",
            "subnet_id": "subnet-02c9486336affd028",
            "tags": {
              "Name": "ThreeTier-p003-testing-gw-NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:network-acl/acl-075deb9f4f66d6e93",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-075deb9f4f66d6e93",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "042236406240",
            "subnet_ids": [
              "subnet-084223ecc28fd60b7",
              "subnet-0f780596eae33dbfa"
            ],
            "tags": {
              "Name": "ThreeTier-p003-testing-acl-private"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:network-acl/acl-0e3a619e5c49f6208",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e3a619e5c49f6208",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "042236406240",
            "subnet_ids": [
              "subnet-02c9486336affd028",
              "subnet-05d1ebef75dfeed7f"
            ],
            "tags": {
              "Name": "ThreeTier-p003-testing-acl-public"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_private_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-486539161",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-075deb9f4f66d6e93",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_private_three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2091076306",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-075deb9f4f66d6e93",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_private_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3244893724",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-075deb9f4f66d6e93",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2948724597",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e3a619e5c49f6208",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3483189822",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e3a619e5c49f6208",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1918316272",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e3a619e5c49f6208",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-335324643",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-075deb9f4f66d6e93",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-158485726",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e3a619e5c49f6208",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0087765c4ca9b752a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ece17da815dc0a83",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0087765c4ca9b752a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-030b02419937cce4a",
            "id": "r-rtb-021c64ed629e0f2711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021c64ed629e0f271",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0087765c4ca9b752a",
            "owner_id": "042236406240",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ece17da815dc0a83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ThreeTier-p003-testing-private-rt"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-021c64ed629e0f271",
            "owner_id": "042236406240",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030b02419937cce4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ThreeTier-p003-testing-public-rt"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064e83473a65d59d7",
            "route_table_id": "rtb-0087765c4ca9b752a",
            "subnet_id": "subnet-0f780596eae33dbfa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_one",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee5064fcf016d1d9",
            "route_table_id": "rtb-0087765c4ca9b752a",
            "subnet_id": "subnet-084223ecc28fd60b7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b29d10c445956259",
            "route_table_id": "rtb-021c64ed629e0f271",
            "subnet_id": "subnet-02c9486336affd028"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_one",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098de0e50d3723783",
            "route_table_id": "rtb-021c64ed629e0f271",
            "subnet_id": "subnet-05d1ebef75dfeed7f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_two",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_http_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-0b3debecb6725aae0",
            "description": "Allows ALB to access the EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3debecb6725aae0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ThreeTier-p003-private-allow_http_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ThreeTier-p003-testing-private-allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ssh_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-0e324aef0636215fd",
            "description": "Allow SSH inbound traffic inter private",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e324aef0636215fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ThreeTier-p003-private-allow_ssh_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ThreeTier-p003-testing-private-allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_http_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-04d00be9dc87329ba",
            "description": "Allow HTTP inbound traffic in group public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d00be9dc87329ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ThreeTier-p003-public-allow_http_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ThreeTier-p003-testing-public-allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ssh_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:security-group/sg-05f3849bde4728c37",
            "description": "Allow SSH inbound traffic from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f3849bde4728c37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ThreeTier-p003-public_ssh_anywhere",
            "name_prefix": "",
            "owner_id": "042236406240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ThreeTier-p003-testing-public-allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:subnet/subnet-0f780596eae33dbfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f780596eae33dbfa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042236406240",
            "tags": {
              "Name": "ThreeTier-p003-testing-one-private-subnet"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:subnet/subnet-084223ecc28fd60b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-084223ecc28fd60b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042236406240",
            "tags": {
              "Name": "ThreeTier-p003-testing-two-private-subnet"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:subnet/subnet-02c9486336affd028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02c9486336affd028",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042236406240",
            "tags": {
              "Name": "ThreeTier-p003-testing-one-public-subnet"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:subnet/subnet-05d1ebef75dfeed7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05d1ebef75dfeed7f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042236406240",
            "tags": {
              "Name": "ThreeTier-p003-testing-two-public-subnet"
            },
            "vpc_id": "vpc-0243fd2107537ef89"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.dns_resolve",
            "module.vpc.aws_vpc_dhcp_options_association.dns_resolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042236406240:vpc/vpc-0243fd2107537ef89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0772e358582f90a32",
            "default_route_table_id": "rtb-0449e62b7805212f0",
            "default_security_group_id": "sg-00c779712422ec53c",
            "dhcp_options_id": "dopt-0c8e88acc2eec8b20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0243fd2107537ef89",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0449e62b7805212f0",
            "owner_id": "042236406240",
            "tags": {
              "Environment": "testing",
              "Name": "ThreeTier-p003-testing-vpc"
            }
          }
        }
      ]
    }
  ]
}